--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Released   : 20130602
 			<li class="current_page_item"><a href="home.html">Home</a></li>
 			<li><a href="aboutme.html">About Me</a></li>
 			<li><a href="research.html">Research</a></li>
-			<li><a href="webcv.pdf"?>CV</a></li>
+			<li><a href="cv2.pdf"?>CV</a></li>
 		</ul>
 	</div>
 	<!-- end #menu -->
