--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@ Released   : 20130602
 		  <li ><a href="aboutme.html">About Me</a></li>
 		  <li "current_page_item"><a
 		  href="research.html">Research</a></li>
-		  <li><a href="webcv.pdf"?>CV</a></li>
+		  <li><a href="cv2.pdf"?>CV</a></li>
 		</ul>
 	</div>
 	<!-- end #menu -->
