--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@ Released   : 20130602
 <div id="wrapper">
 	<div id="menu" class="container">
 		<ul>
-		  <li><a href="home.html">Home</a></li>
+		  <li><a href="index.html">Home</a></li>
 		  <li ><a href="aboutme.html">About Me</a></li>
 		  <li "current_page_item"><a
 		  href="research.html">Research</a></li>
