--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Released   : 20130602
 	<!-- end #menu -->
 	<div id="header" class="container">
 		<div id="logo" align="left">
-			<h1><a href="home.html">Timothy Carleton</a></h1>
+			<h1><a href="index.html">Timothy Carleton</a></h1>
 			<!-- <p>Design by <a -->
 		  <!-- href="http://templated.co"
 		  rel="nofollow">TEMPLATED</a></p> -->
