--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Released   : 20130602
 <div id="wrapper">
 	<div id="menu" class="container">
 		<ul>
-			<li class="current_page_item"><a href="home.html">Home</a></li>
+			<li class="current_page_item"><a href="index.html">Home</a></li>
 			<li><a href="aboutme.html">About Me</a></li>
 			<li><a href="research.html">Research</a></li>
 			<li><a href="cv2.pdf"?>CV</a></li>
