--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@ Released   : 20130602
 			</div>
 			<span class="image image-right"><img src="images/timinobs2cut.jpg" alt="" /></span>
 			<p>
-			I am a Postdoctoral Fellow at the University of Missouri, Columbia working with Professor Yicheng Guo studying galaxy evolution.
+			I am a Postdoctoral Fellow at the Arizona State University working with Professor Rogier Windhorst studying galaxy evolution.
 			In addition to my <a href="research.html">research</a>, I am very
 			passionate about astronomers' obligation to meet the public's
 			overwhelming demand for scientific engagement.
@@ -71,12 +71,6 @@ Released   : 20130602
 			to understand the molecular gas conditions to understand
 			the decline of the star formation rate
 			the past 10 Gyr.--!>
-			</p>
-			<p>
-			When out of the office, I enjoy volunteering with the
-			<a href="http://www.ciclavia.org/">Ciclavia
-			</a> organization, working to engage Los
-			Angeles communities through open-streets events.
 			</p>
 		</div>
 	</div>
