--- a/research.html
+++ b/research.html
@@ -45,9 +45,12 @@ Released   : 20130602
 			My research is focused the
 			  interplay between internal and external
 			  factors affecting galaxy evolution
-			  between z=1 and today, with the ultimate goal of
-			understanding the decline in global
-			star-formation activity in the past 10 Gyr.
+			  between z=1 and today, with a focus on dwarf galaxies.
+			Dwarf galaxies have a very wide range of properties and are affected by a
+				variety of physical processes. They are the most abundant galaxies in the
+				Universe, and there is a lot we still a lot we still don't understand about them!
+			For my research, I often combine observational data (often from HST or JWST) with simulation data
+				to best study my particular research problem.
 			</div>
 			<h3>Ultra-Diffuse Galaxies</h3>
 			<p>
@@ -67,7 +70,7 @@ Released   : 20130602
 			environmentally-motivated UDG formation
 			mechanisms using the Bolshoi simulation.
 			</p>
-			<h3>The UVJ Diagram & the 3D-HST survey</h3>
+			<!--<h3>The UVJ Diagram & the 3D-HST survey</h3>
 			<p>
 			The location of a galaxy in <it>U-V</it>
 			vs. <it>V-J</it> color-color space has proven
@@ -127,7 +130,7 @@ Released   : 20130602
 value. My research, which found that &alpha;<sub>CO</sub> values do
 not significantly evolve from <it>z</it>=1 to <it>z</it>=0,
 demonstrates that molecular gas conditions have not significantly
-evolved over the past 8 billion years.
+evolved over the past 8 billion years.-->
 			<!--By comparing the observed CO luminosities
 			to the observed star-formation rates, we are
 			able to gain insight into the structure of
