--- a/research.html
+++ b/research.html
@@ -61,14 +61,23 @@ Released   : 20130602
 			sensitivity limits. Understanding the formation of
 			these unusual galaxies is compelling, both on
 			its own right as well as within the broader context of
-			dwarf galaxy fromation and evolution. Although these
-			galaxies have been observed both inside and
-			outside clusters, UDGs seem to be both more
-			abundant and more diffuse in high-density
-			environments. Motivated by this observed bias, I am
-			currently investigating
-			environmentally-motivated UDG formation
-			mechanisms using the Bolshoi simulation.
+			dwarf galaxy fromation and evolution. 
+			</p>
+			<h3>Dwarf Galaxy Globular Clusters</h3>
+			<p>
+				One of the most interesting properties of UDGs is their significant globular cluster populations.
+				While some have speculated that this is connected witih their dark matter halo properties, the globular cluster-dark matter halo
+				connection is poorly understood for dwarf galaxies. Understanding the connection between globular clusters and dwarf galaxies
+				can give us insight to the process of globular cluster formation, as well as the dark matter halos of dwarf galaxies.
+			</p>
+			<h3>Exragalactic Background Light and SKYSURF</h3>
+			<p>
+				When we point our telescopes at the night sky, we can see many different types of stars and galaxies, as well as many diffuse
+				light foregrounds, like Zodiacal Light and Diffuse Galactic Light. When all the light from
+				all of these objects and foregrounds is summed together, it should equal the total amount of light we see. However, some studies indicate
+				that that is not the case, suggesting that some other light source is missing from our understanding. <a href=http://skysurf.asu.edu/>SKYSURF is a large archival
+				HST project to study this discrepancy - both in terms of better constraining the light from exragalactic sources (the Extragalactic Background
+				Light) and measuring the total level of incoming light.
 			</p>
 			<!--<h3>The UVJ Diagram & the 3D-HST survey</h3>
 			<p>
