--- a/aboutme.html
+++ b/aboutme.html
@@ -52,9 +52,10 @@ Released   : 20130602
 			Outreach Coordinator for the <a
 			href="http://www.physics.edu/~observat/">UCI
 			Observatory</a>,
-			I organized over 50 events with local community
+			I organized events with local community
 			organizations and schools to bring astronomy to the
-			public, ranging from
+			public.
+			<!--ranging from
 			girl-scout 
 			field trips with a few young astronomers to
 			over an exhibit at the Irvine
@@ -62,7 +63,7 @@ Released   : 20130602
 			thousand elementary school students. Throughout this time, the universal
 			positive reaction that I am met with
 			encourages me of the appreciation of members
-			of the public of astronomy.
+			of the public of astronomy.--!>
 			<!--I am a fourth year graduate student at UC
 			Irvine. I work with Michael Cooper primarily
 			studying the relationship between star
@@ -72,6 +73,9 @@ Released   : 20130602
 			the decline of the star formation rate
 			the past 10 Gyr.--!>
 			</p>
+			<p>
+			In my free time, I enjoy traveling and visiting some great National Parks!
+   </p>
 		</div>
 	</div>
 </div>
