--- a/research.html
+++ b/research.html
@@ -49,8 +49,10 @@ Released   : 20130602
 			Dwarf galaxies have a very wide range of properties and are affected by a
 				variety of physical processes. They are the most abundant galaxies in the
 				Universe, and there is a lot we still a lot we still don't understand about them!
+			<p>
 			For my research, I often combine observational data (often from HST or JWST) with simulation data
 				to best study my particular research problem.
+				</p>	
 			</div>
 			<h3>Ultra-Diffuse Galaxies</h3>
 			<p>
@@ -75,7 +77,7 @@ Released   : 20130602
 				When we point our telescopes at the night sky, we can see many different types of stars and galaxies, as well as many diffuse
 				light foregrounds, like Zodiacal Light and Diffuse Galactic Light. When all the light from
 				all of these objects and foregrounds is summed together, it should equal the total amount of light we see. However, some studies indicate
-				that that is not the case, suggesting that some other light source is missing from our understanding. <a href=http://skysurf.asu.edu/>SKYSURF is a large archival
+				that that is not the case, suggesting that some other light source is missing from our understanding. <a href=http://skysurf.asu.edu/>SKYSURF</a> is a large archival
 				HST project to study this discrepancy - both in terms of better constraining the light from exragalactic sources (the Extragalactic Background
 				Light) and measuring the total level of incoming light.
 			</p>
@@ -118,7 +120,7 @@ Released   : 20130602
 			<!--<span class="image image-right"><img
 			src="images/cgasphibbsksaco.png" alt=""/></span>--!>
 			<p>
-			Molecular gas is the principal
+			<!--Molecular gas is the principal
 			fuel in the star formation process, so understanding the
 			molecular gas content of high-redshift
 			galaxies goes a long way in building our
@@ -139,7 +141,7 @@ Released   : 20130602
 value. My research, which found that &alpha;<sub>CO</sub> values do
 not significantly evolve from <it>z</it>=1 to <it>z</it>=0,
 demonstrates that molecular gas conditions have not significantly
-evolved over the past 8 billion years.-->
+evolved over the past 8 billion years.--!>
 			<!--By comparing the observed CO luminosities
 			to the observed star-formation rates, we are
 			able to gain insight into the structure of
