--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@ Released   : 20130602
 			<div class="title">
 				<h2>About Me</h2>
 			</div>
-			<span class="image image-right"><img src="images/timinobs2cut.jpg" alt="" /></span>
+			<span class="image image-right"><img src="images/me_at_bryce.jpg" alt="" /></span>
 			<p>
 			I am a Postdoctoral Fellow at the Arizona State University working with Professor Rogier Windhorst studying galaxy evolution.
 			In addition to my <a href="research.html">research</a>, I am very
