--- a/aboutme.html
+++ b/aboutme.html
@@ -40,9 +40,9 @@ Released   : 20130602
 			<div class="title">
 				<h2>About Me</h2>
 			</div>
-			<span class="image image-right"><img src="images/me_at_bryce2.png" alt="" width="60%"/></span>
+			<span class="image image-right"><img src="images/me_at_bryce2.png" alt="" width="40%"/></span>
 			<p>
-			I am a Postdoctoral Fellow at the Arizona State University working with Professor Rogier Windhorst studying galaxy evolution.
+			I am a Postdoctoral Fellow at the Arizona State University working with Professors Rogier Windhorst studying galaxy evolution.
 			In addition to my <a href="research.html">research</a>, I care
 			about astronomers' obligation to meet the public's
 			overwhelming demand for scientific engagement.
