--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@ Released   : 20130602
 			</div>
 			<span class="image image-right"><img src="images/me_at_bryce2.png" alt="" width="100px"/></span>
 			<p>
-			I am a Postdoctoral Fellow at the Arizona State University working with Professors Rogier Windhorst studying galaxy evolution.
+			I am a Postdoctoral Fellow at the Arizona State University working with Professor Rogier Windhorst studying galaxy evolution.
 			In addition to my <a href="research.html">research</a>, I care
 			about astronomers' obligation to meet the public's
 			overwhelming demand for scientific engagement.
