--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,8 @@ Released   : 20130602
 			<div class="title">
 				<h2>About Me</h2>
 			</div>
-			<span class="image image-right"><img src="images/me_at_bryce2.png" alt="" width="100px"/></span>
+			<span style="display: inline-block; float:
+			right;margin: 0em 0em 2em 2em; width:50%"><img src="images/me_at_bryce2.png" alt=""/></span>
 			<p>
 			I am a Postdoctoral Fellow at the Arizona State University working with Professor Rogier Windhorst studying galaxy evolution.
 			In addition to my <a href="research.html">research</a>, I care
