--- a/aboutme.html
+++ b/aboutme.html
@@ -43,8 +43,10 @@ Released   : 20130602
 			<span style="display: inline-block; float:
 			right;margin: 0em 0em 2em 2em; width:50%"><img src="images/me_at_bryce2.png" alt=""/></span>
 			<p>
-			I am a Postdoctoral Fellow at the Arizona State University working with Professor Rogier Windhorst studying galaxy evolution.
-			In addition to my <a href="research.html">research</a>, I care
+			I am an assistant research scientist at Arizona State University interested in how dwarf galaxies grow and evolve.
+			I use both observations (primarily from the Hubble Space Telescope and James Webb Space Telescope) as well as simulations (primarily the Illustris-TNG simulation) to better understand the processes driving dwarf galaxy evolution.
+			My first love is figuring out how the universe works and working with others in the journey of discovery, but in my spare time, I also enjoy watching baseball and spending time in nature.
+			<!--In addition to my <a href="research.html">research</a>, I care
 			about astronomers' obligation to meet the public's
 			overwhelming demand for scientific engagement.
 			</p>
@@ -56,7 +58,7 @@ Released   : 20130602
 			I organized events with local community
 			organizations and schools to bring astronomy to the
 			public.
-			<!--ranging from
+			ranging from
 			girl-scout 
 			field trips with a few young astronomers to
 			over an exhibit at the Irvine
