--- a/aboutme.html
+++ b/aboutme.html
@@ -41,7 +41,7 @@ Released   : 20130602
 				<h2>About Me</h2>
 			</div>
 			<span style="display: inline-block; float:
-			right;margin: 0em 0em 2em 2em; width:50%; height:50%"><img src="images/me_at_bryce2.png" alt=""/></span>
+			right;margin: 0em 0em 2em 2em; width:50%"><img src="images/me_at_bryce2.png" alt=""/></span>
 			<p>
 			I am an assistant research scientist at Arizona State University interested in how dwarf galaxies grow and evolve.
 			I use both observations (primarily from the Hubble Space Telescope and James Webb Space Telescope) as well as simulations (primarily the Illustris-TNG simulation) to better understand the processes driving dwarf galaxy evolution.
